<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AvantajPam</string>
    <string name="connection">Konekte / Inskri</string>
    <string name="yourPhoneNumber">Nimewo Telefon ou</string>
    <string name="digicelOrNatcom">Nimero Digicel oswa Natcom</string>
    <string name="continu">Kontinye</string>
    <string name="accept_the_terms_and_conditions_and_press_on_button_register">Akspte Tèm ak kondisyon yo epi peze sou bouton ENSKRI </string>
    <string name="i_am_over_18_years_old_and_i_agree_terms_and_conditions.">Mwen gen plis ke 18 lane e mwen dakò avèk tèm ak kondisyon yo.</string>
    <string name="termsAndConditions">Tèm ak Kondisyon </string>
    <string name="privacyPolicy">Politik Konfidansyalite</string>
    <string name="isSponsorshipCodeMessage">Eske ou gen yon kod parenaj?
Kod parenaj la se si ou gen on zanmiw
ki referew epi li te ba ou on kod parenaj.

Si ou pa gen youn, jis peze NON.</string>
    <string name="yes">Wi</string>
    <string name="no">Non</string>
    <string name="add_a_referral_code">Ajoute yon kòd parenajAjoute yon kòd parenaj</string>
    <string name="sms_verification">Verifikasyon SMS</string>
    <string name="we_have_just_sent_a_code_temporary_by_sms_on_your_phone_number.">Nou sot voye yon kòd tanporè pa SMS sou nimewo telefòn ou.</string>
    <string name="did_you_not_receive_the_code">Ou pa resevwa kòd la?</string>
    <string name="send_another_sms_again">Voye yon lòt SMS ankò</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="ok">OK</string>
    <string name="secret_code">Kòd sekrè</string>
    <string name="create_secret_code">Kreye kòd sekrè</string>
    <string name="choose_4_numbers_as_your_secret_code_this_number_do_not_give_it_to_anyone.">Chwazi 4 nimewo kòm kòd sekrè ou.
Nimewo sa, Pa bay okenn moun li.
</string>
    <string name="verify_the_secret_code">Verifye kòd sekrè a</string>
    <string name="enter_the_secret_code_again_to_verify">Antre kòd sekrè yon lòt fwa pou verifye.</string>
    <string name="clear">clear</string>
    <string name="change_pin">Chanje Pin</string>
    <string name="old_secret_code">Ansyen Kòd Sekrè</string>
    <string name="new_secret_code">Nouvo Kòd Sekrè</string>
    <string name="confirm_secret_code">Konfime Kòd Sekrè</string>
    <string name="confirm">Konfime</string>
    <string name="electronic_address">Adrès Elektronik </string>
    <string name="last_name">Siyati</string>
    <string name="first_name">Nonw</string>
    <string name="sexe">Sèks</string>
    <string name="male">Maskilen</string>
    <string name="female">Feminen</string>
    <string name="department">Depatman</string>
    <string name="west">Wès</string>
    <string name="town">Komin</string>
    <string name="PetoonVille">Petyonvil</string>
    <string name="number_id">Nimewo</string>
    <string name="add_id_photo">Ajoute foto pyès</string>
    <string name="fullname">Siyati ak Prenon</string>
    <string name="birthdate">Dat Nesans</string>
    <string name="user_number">Nimewo Itilizatè</string>
    <string name="language">Lang</string>
    <string name="no_identity">No Idantite</string>
    <string name="delete_my_account">Siprime Kont Mwen</string>
    <string name="verify_your_account">Verifye kont ou</string>
    <string name="waiting_to_verify">An atant verifikasyon</string>
    <string name="haitian_creol">Kreyòl</string>



    <string name="number_id_placeholder">123-123-123-1</string>
    <string name="last_name_placeholder">Sebastien</string>
    <string name="first_name_placeholder">Barjon</string>
    <string name="electronic_address_placeholder">jsbarjon</string>
    <string name="phone_number_placeholder">+509 38217170</string>
    <string name="secret_code_placeholder">****</string>
    <string name="n_a_placeholder">N/A</string>





    <string name="flashcardQuestion">What is the first black people free in the world ?</string>
    <string name="flashcardAnswerHint">Empty</string>
    <string name="addNewFlashCard">New</string>
    <string name="newFlashCard">New card Question ?</string>
    <string name="cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="save">save</string>
    <string name="answer1">Haitian</string>
    <string name="answer2">Venezuela</string>
    <string name="answer3">Bolivia</string>
    <string name="answerEmpty">Answer Empty</string>
    <string name="goodAnswerEmpty">Good answer Empty</string>
    <string name="wrongAnswerEmpty">Wrong answer Empty</string>
    <string name="question_is_empty">Question is empty !</string>
    <string name="saveSuccessCard">Card successfull created!</string>
    <string name="modifySuccessCard">Card successfull mdified!</string>
    <string name="answer_is_empty">Answer is empty</string>
    <string name="button_next_card">Button next card</string>
    <string name="button_previous_card">Button previous card</string>
    <string name="button_delete_card">Button delete card</string>
    <string name="emptyCard">Empty Card !</string>
    <string name="delete">"Delete "</string>
    <string name="card">" Card ?"</string>
</resources>