<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateSecretCodeActivity">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/password_icon"
        android:layout_width="0dp"
        android:layout_height="103dp"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="68dp"
        android:layout_marginStart="151dp"
        android:layout_marginEnd="151dp"
        android:gravity="center"
        android:src="@drawable/password_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        tools:ignore="ContentDescription,RedundantDescriptionCheck,RtlHardcoded" />
    <TextView
        android:id="@+id/create_secret_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:gravity="center"
        android:text="@string/create_secret_code"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_icon" />


    <com.mukeshsolanki.OtpView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="87dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:inputType="text"
        android:itemBackground="@drawable/bg_otp_item"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        app:OtpHideLineWhenFilled="true"
        app:OtpItemCount="4"
        app:OtpItemSpacing="6dp"
        app:OtpLineColor="@color/otp_item_state"
        app:OtpState_filled="true"
        app:OtpViewType="line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_secret_code" />

    <TextView
        android:id="@+id/pin_code_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="110dp"
        android:gravity="center"
        android:text="@string/choose_4_numbers_as_your_secret_code_this_number_do_not_give_it_to_anyone."
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otp_view" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pin_code_message">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:text="@string/_1"
                app:cornerRadius="24dp"/>


            <Button
                android:id="@+id/button2"
                android:layout_margin="5dp"
                android:text="@string/_2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cornerRadius="24dp"/>

            <Button
                android:id="@+id/button3"
                android:layout_margin="5dp"
                android:text="@string/_3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cornerRadius="24dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_margin="5dp"
                android:text="@string/_4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cornerRadius="24dp"/>

            <Button
                android:id="@+id/button5"
                android:layout_margin="5dp"
                android:text="@string/_5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cornerRadius="24dp"/>

            <Button
                android:id="@+id/button6"
                android:layout_margin="5dp"
                android:text="@string/_6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cornerRadius="24dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_margin="5dp"
                android:text="@string/_7"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cornerRadius="24dp"/>

            <Button
                android:id="@+id/button8"
                android:layout_margin="5dp"
                android:text="@string/_8"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cornerRadius="24dp"/>

            <Button
                android:id="@+id/button9"
                android:layout_margin="5dp"
                android:text="@string/_9"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cornerRadius="24dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/imageButton"
                android:layout_margin="5dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/clear"
                app:srcCompat="@drawable/ic_prev"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cornerRadius="24dp"/>

            <Button
                android:id="@+id/button0"
                android:layout_margin="5dp"
                android:text="@string/_0"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cornerRadius="24dp"/>

            <Button
                android:id="@+id/btnOk"
                android:layout_margin="5dp"
                android:text="@string/ok"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cornerRadius="24dp"/>
        </LinearLayout>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
