<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ButtonNumberPad">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:text="@string/_1"
                app:cornerRadius="24dp"
                android:textColor="@color/btn_text_number_blue"
                android:backgroundTint="@color/btn_background_number_yellow"
                android:background="@drawable/button_secondary_bg"
                app:backgroundTint="@null"/>


            <Button
                android:id="@+id/button2"
                android:layout_margin="5dp"
                android:text="@string/_2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cornerRadius="24dp"
                android:textColor="@color/btn_text_number_blue"
                android:backgroundTint="@color/btn_background_number_yellow"
                android:background="@drawable/button_secondary_bg"
                app:backgroundTint="@null"/>

            <Button
                android:id="@+id/button3"
                android:layout_margin="5dp"
                android:text="@string/_3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cornerRadius="24dp"
                android:textColor="@color/btn_text_number_blue"
                android:backgroundTint="@color/btn_background_number_yellow"
                android:background="@drawable/button_secondary_bg"
                app:backgroundTint="@null"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_margin="5dp"
                android:text="@string/_4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cornerRadius="24dp"
                android:textColor="@color/btn_text_number_blue"
                android:backgroundTint="@color/btn_background_number_yellow"
                android:background="@drawable/button_secondary_bg"
                app:backgroundTint="@null"/>

            <Button
                android:id="@+id/button5"
                android:layout_margin="5dp"
                android:text="@string/_5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cornerRadius="24dp"
                android:textColor="@color/btn_text_number_blue"
                android:backgroundTint="@color/btn_background_number_yellow"
                android:background="@drawable/button_secondary_bg"
                app:backgroundTint="@null"/>

            <Button
                android:id="@+id/button6"
                android:layout_margin="5dp"
                android:text="@string/_6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cornerRadius="24dp"
                android:textColor="@color/btn_text_number_blue"
                android:backgroundTint="@color/btn_background_number_yellow"
                android:background="@drawable/button_secondary_bg"
                app:backgroundTint="@null"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                android:layout_margin="5dp"
                android:text="@string/_7"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cornerRadius="24dp"
                android:textColor="@color/btn_text_number_blue"
                android:backgroundTint="@color/btn_background_number_yellow"
                android:background="@drawable/button_secondary_bg"
                app:backgroundTint="@null"/>

            <Button
                android:id="@+id/button8"
                android:layout_margin="5dp"
                android:text="@string/_8"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cornerRadius="24dp"
                android:textColor="@color/btn_text_number_blue"
                android:backgroundTint="@color/btn_background_number_yellow"
                android:background="@drawable/button_secondary_bg"
                app:backgroundTint="@null"/>

            <Button
                android:id="@+id/button9"
                android:layout_margin="5dp"
                android:text="@string/_9"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cornerRadius="24dp"
                android:textColor="@color/btn_text_number_blue"
                android:backgroundTint="@color/btn_background_number_yellow"
                android:background="@drawable/button_secondary_bg"
                app:backgroundTint="@null"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/imageButton"
                android:layout_margin="5dp"
                android:contentDescription="@string/clear"
                app:srcCompat="@drawable/ic_arrow_left"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:textColor="@color/white"
                android:background="@drawable/button_bg"
                app:backgroundTint="@null"
                app:cornerRadius="24dp"/>

            <Button
                android:id="@+id/button0"
                android:layout_margin="5dp"
                android:text="@string/_0"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cornerRadius="24dp"
                android:textColor="@color/btn_text_number_blue"
                android:backgroundTint="@color/btn_background_number_yellow"
                android:background="@drawable/button_secondary_bg"
                app:backgroundTint="@null"/>

            <Button
                android:id="@+id/btnOk"
                android:layout_margin="5dp"
                android:text="@string/ok"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:background="@drawable/button_bg"
                app:backgroundTint="@null"
                app:cornerRadius="24dp"/>
        </LinearLayout>
    </LinearLayout>