<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IsSponsorshipCode">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:contentDescription="@string/button_previous_card"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="235dp"
        android:layout_marginTop="38dp"
        android:contentDescription="@string/button_previous_card"
        android:src="@drawable/avantajpam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        tools:ignore="ContentDescription,RedundantDescriptionCheck,RtlHardcoded" />

    <TextView
        android:id="@+id/isSponsorshipCodeMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="37dp"
        android:gravity="center"
        android:text="@string/isSponsorshipCodeMessage"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <Button
        android:id="@+id/fabEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="41dp"
        android:contentDescription="@string/save"
        android:minHeight="48dp"
        android:text="@string/yes"
        app:backgroundTint="@color/green"
        app:layout_constraintEnd_toStartOf="@+id/fabNew"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/isSponsorshipCodeMessage"
        app:srcCompat="@drawable/ic_edit_48dp"
        app:tint="@android:color/white"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <Button
        android:id="@+id/fabNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:contentDescription="@string/newFlashCard"
        android:minHeight="48dp"
        android:text="@string/no"
        app:backgroundTint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fabEdit"
        app:layout_constraintTop_toBottomOf="@id/isSponsorshipCodeMessage"
        app:srcCompat="@drawable/ic_add_black_24dp"
        app:tint="@android:color/white"
        tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>